--- a/rice.gb.local.en.adoc
+++ b/rice.gb.local.en.adoc
@@ -29,10 +29,10 @@
 :obsoletes-parts: clause 7-9, clause 11
 :iso-standard: ISO 17301-1:2016
 :equivalence: identical
-:scope: national
+:scope: local
 :mandate: recommended
 :topic: health-and-safety
-:prefix: GB/T
+:prefix: DB81/T
 :issued-date: 2018-08-10
 :published-date: 2018-08-10
 :activated-date: 2019-02-10
@@ -40,10 +40,10 @@
 :sectnumlevels: 7
 :stem:
 :xrefstyle: short
-:appendix-caption: 附件
-:appendix-refsig: 附件
-:section-refsig: 章
-:table-caption: 表
-:example-caption: 例
+:appendix-caption: Annex
+:appendix-refsig: Annex
+:section-refsig: Section
+:table-caption: Table
+:example-caption: Example
 
-include::body/body-zh.adoc[]
+include::body/body-en.adoc[]
