--- a/rice.gb.local.zh.adoc
+++ b/rice.gb.local.zh.adoc
@@ -29,10 +29,10 @@
 :obsoletes-parts: clause 7-9, clause 11
 :iso-standard: ISO 17301-1:2016
 :equivalence: identical
-:scope: national
+:scope: local
 :mandate: recommended
 :topic: health-and-safety
-:prefix: GB/T
+:prefix: DB81/T
 :issued-date: 2018-08-10
 :published-date: 2018-08-10
 :activated-date: 2019-02-10
