--- a/body/body-zh.adoc
+++ b/body/body-zh.adoc
@@ -611,27 +611,27 @@ ENR [水稻研究中心（意大利）]在根据<<ISO5725-1>>和<<ISO5725-2>>要
 [bibliography]
 == 参考文献
 
-* [[[ISO3696,ISO 3696]]], _分析实验室用水 - 规范和试验方法，Water for analytical laboratory use -- Specification and test methods_
+* [[[ISO3696,ISO 3696]]], _[zh]#分析实验室用水 - 规范和试验方法#_ _[en]#Water for analytical laboratory use -- Specification and test methods#_
 
 * [[[ISO5725-1,ISO 5725-1]]], _Accuracy (trueness and precision) of measurement methods and results -- Part 1: General principles and definitions_
 
-* [[[ISO5725-2,ISO 5725-2]]], _测量方法和结果的准确性（准确性和精确性）第1部分：一般原理和定义，Accuracy (trueness and precision) of measurement methods and results -- Part 2: Basic method for the determination of repeatability and reproducibility of a standard measurement method_
+* [[[ISO5725-2,ISO 5725-2]]], _[zh]#测量方法和结果的准确性（准确性和精确性）第1部分：一般原理和定义#_ _[en]#Accuracy (trueness and precision) of measurement methods and results -- Part 2: Basic method for the determination of repeatability and reproducibility of a standard measurement method#_
 
-* [[[ISO6322-1,ISO 6322-1]]], _谷物和豆类的贮存 第1部分：谷物保存的一般性建议， Storage of cereals and pulses -- Part 1: General recommendations for the keeping of cereals_
+* [[[ISO6322-1,ISO 6322-1]]], _[zh]#谷物和豆类的贮存 第1部分：谷物保存的一般性建议#_ _[en]#Storage of cereals and pulses -- Part 1: General recommendations for the keeping of cereals#_
 
-* [[[ISO6322-2,ISO 6322-2]]], _谷类和豆类的贮藏 第2部分：实用建议，Storage of cereals and pulses -- Part 2: Practical recommendations_
+* [[[ISO6322-2,ISO 6322-2]]], _[zh]#谷类和豆类的贮藏 第2部分：实用建议#_ _[en]#Storage of cereals and pulses -- Part 2: Practical recommendations#_
 
-* [[[ISO6322-3,ISO 6322-3]]], _谷类和豆类的贮藏 第3部分：防治害虫侵袭，Storage of cereals and pulses -- Part 3: Control of attack by pests_
+* [[[ISO6322-3,ISO 6322-3]]], _[zh]#谷类和豆类的贮藏 第3部分：防治害虫侵袭#_ _[en]#Storage of cereals and pulses -- Part 3: Control of attack by pests#_
 
-* [[[ISO7301,ISO 7301:2011]]], _大米 - 规格，Rice -- Specification_
+* [[[ISO7301,ISO 7301:2011]]], _[zh]#大米 - 规格#_ _[en]#Rice -- Specification#_
 
-* [[[ISO14864,ISO 14864:1998]]], _水稻 - 烹饪过程中谷粒糊化时间的评估，Rice -- Evaluation of gelatinization time of kernels during cooking_
+* [[[ISO14864,ISO 14864:1998]]], _[zh]#水稻 - 烹饪过程中谷粒糊化时间的评估_ _[en]#Rice -- Evaluation of gelatinization time of kernels during cooking#_
 
-* [[[IEC61010-2,IEC 61010-2:1998]]], _测量，控制和实验室用电气设备的安全要求 第2部分：加热材料的实验室设备的特殊要求， Safety requirements for electric equipment for measurement, control, and laboratory use -- Part 2: Particular requirements for laboratory equipment for the heating of material_
+* [[[IEC61010-2,IEC 61010-2:1998]]], _[zh]#测量，控制和实验室用电气设备的安全要求 第2部分：加热材料的实验室设备的特殊要求_ _[en]#Safety requirements for electric equipment for measurement, control, and laboratory use -- Part 2: Particular requirements for laboratory equipment for the heating of material#_
 
-* [[[ref10,10]]] [smallcap]#Standard No I.C.C 167#. _根据杜马斯燃烧法测定食品和动物饲料中谷物和谷类食品中的蛋白质含量，Determination of the protein content in cereal and cereal products for food and animal feeding stuffs according to the Dumas combustion method_ (see http://www.icc.or.at)
+* [[[ref10,10]]] [smallcap]#Standard No I.C.C 167#. _[zh]#根据杜马斯燃烧法测定食品和动物饲料中谷物和谷类食品中的蛋白质含量#_ _[en]#Determination of the protein content in cereal and cereal products for food and animal feeding stuffs according to the Dumas combustion method#_ (see http://www.icc.or.at)
 
-* [[[ref11,11]]] 氮 - 氨 - 蛋白质改性凯氏定氮法 - 氧化钛和硫酸铜催化剂，Nitrogen-ammonia-protein modified Kjeldahl method -- Titanium oxide and copper sulfate catalyst. _AOCS的官方方法和建议措施_，_Official Methods and Recommended Practices of the AOCS_ (ed. Firestone, D.E.), AOCS Official Method Ba Ai 4-91, 1997, AOCS Press, Champaign, IL
+* [[[ref11,11]]] [zh]#氮 - 氨 - 蛋白质改性凯氏定氮法 - 氧化钛和硫酸铜催化剂# [en]#Nitrogen-ammonia-protein modified Kjeldahl method -- Titanium oxide and copper sulfate catalyst.# _[zh]#AOCS的官方方法和建议措施#_ _[en]#Official Methods and Recommended Practices of the AOCS#_ [en]#(ed. Firestone, D.E.), AOCS Official Method Ba Ai 4-91, 1997, AOCS Press, Champaign, IL#
 
 * [[[ref12,12]]] [smallcap]#Berner D.L., & Brown J.# 蛋白质氮燃烧法的协同研究1：与Smalley总凯氏定氮法和燃烧结果的比较，Protein nitrogen combustion method collaborative study I. Comparison with Smalley total Kjeldahl nitrogen and combustion results. _J. Am. Oil Chem. Soc._ 1994, *71* (11) pp 1291-1293
 
