--- a/sources/rice.gb.en.adoc
+++ b/sources/rice.gb.en.adoc
@@ -5,8 +5,8 @@
 :revdate: 2018-08-08
 :copyright-year: 2018
 :iteration: 3
-:language: zh
-:script: Hans
+:language: en
+:script: Latn
 :title-intro-en: Cereals and pulses
 :title-main-en: Specifications and test methods
 :title-part-en: Rice
@@ -29,21 +29,18 @@
 :obsoletes-parts: clause 7-9, clause 11
 :iso-standard: ISO 17301-1:2016
 :equivalence: identical
-:scope: sector
+:scope: national
 :mandate: recommended
 :topic: health-and-safety
-:prefix: LS/T
+:prefix: GB/T
 :issued-date: 2018-08-10
 :published-date: 2018-08-10
 :implemented-date: 2019-02-10
-:toc:
 :sectnumlevels: 7
-:stem:
-:xrefstyle: short
-:appendix-caption: 附件
-:appendix-refsig: 附件
-:section-refsig: 章
-:table-caption: 表
-:example-caption: 例
+:docfile: rice.gb.en.adoc
+:mn-document-class: gb
+:mn-output-extensions: xml,html,doc,rxl
+:local-cache-only:
+:data-uri-image:
 
-include::body/body-zh.adoc[]
+include::body/body-en.adoc[]
