Add GHA build badge for docker

--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,7 @@
 image:https://github.com/metanorma/mn-samples-gb/workflows/ubuntu/badge.svg["Ubuntu Build Status", link="https://github.com/metanorma/mn-samples-gb/actions?query=workflow%3Aubuntu"]
 image:https://github.com/metanorma/mn-samples-gb/workflows/macos/badge.svg["OSX Build Status", link="https://github.com/metanorma/mn-samples-gb/actions?query=workflow%3Amacos"]
 image:https://github.com/metanorma/mn-samples-gb/workflows/windows/badge.svg["Windows Build Status", link="https://github.com/metanorma/mn-samples-gb/actions?query=workflow%3Awindows"]
+image:https://github.com/metanorma/mn-samples-gb/workflows/docker/badge.svg["Docker Build Status", link="https://github.com/metanorma/mn-samples-gb/actions?query=workflow%3Adocker"]
 
 
 This document is available in its rendered forms here:
