--- a/sources/body/body-zh.adoc
+++ b/sources/body/body-zh.adoc
@@ -29,7 +29,7 @@
 Vache Equipment +
 Fictitious +
 World +
-gehf@vacheequipment.fic
+mailto:gehf@vacheequipment.fic[]
 
 请注意本文件的某些内容可能成为上述以外专利权的主题。 发行人不负责识别任何或所有此类专利权。
 
